# openbosniana-welcome

./: .bashrc  CMakeLists.txt  Makefile  README.md  grub.default  helpers  main.cpp
apt/preferences.d/: denios-pinning
dconf/db/local.d/: denios-skel
debian/: changelog  control  copyright  debhelper-build-stamp  files  install  parrot-core-lite.install  parrot-core.install  postinst  rules
debian/denios-core-lite/DEBIAN/: control  md5sums
debian/denios-core/DEBIAN/: conffiles  control  md5sums  preinst
debian/denios-core/etc/apt/preferences.d/: denios-pinning
debian/denios-core/usr/lib/denios-skel/etc/dconf/db/local.d/: denios-skel
debian/denios-core/usr/lib/denios-skel/etc/skel/Templates/prog/: assembly.asm  bash-sh.sh  c.c  falcon.fal  golang.go  perl.pl  ruby.rb
debian/denios-drivers/DEBIAN/: control  md5sums
localbin/: apt
skel/: .gtkrc-2.0  .zshrc
skel/.config/: kdeglobals  kscreenlockerrc  plasma-org.kde.plasma.desktop-appletsrc  plasmarc
skel/.config/dconf/: user
skel/.config/fish/: config.fish
skel/.config/gtk-3.0/: settings.ini
skel/.config/polybar/: config  launch.sh
skel/.config/powershell/: Microsoft.PowerShell_profile.ps1
skel/.config/xfce4/: helpers.rc
skel/.config/xfce4/panel/: whiskermenu-15.rc  whiskermenu-6.rc  whiskermenu-9.rc
skel/.config/xfce4/xfconf/xfce-perchannel-xml/: xfce4-panel.xml  xsettings.xml
skel/Templates/prog/: ObjC.m  c#.cs  c++.cpp  java.java  perl6.pl  python3.py  rust.rs
